# browser-protocol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
Scripts/: generate_rust_code.py
scripts/: generate_rust_code.py
src/: lib.rs
src/accessibility/: mod.rs
src/animation/: mod.rs
src/audits/: mod.rs
src/autofill/: mod.rs
src/backgroundservice/: mod.rs
src/bluetoothemulation/: mod.rs
src/browser/: mod.rs
src/cachestorage/: mod.rs
src/cast/: mod.rs
src/crashreportcontext/: mod.rs
src/css/: mod.rs
src/debugger/: mod.rs
src/deviceaccess/: mod.rs
src/deviceorientation/: mod.rs
src/dom/: mod.rs
src/domdebugger/: mod.rs
src/domsnapshot/: mod.rs
src/domstorage/: mod.rs
src/emulation/: mod.rs
src/eventbreakpoints/: mod.rs
src/extensions/: mod.rs
src/fedcm/: mod.rs
src/fetch/: mod.rs
src/filesystem/: mod.rs
src/headlessexperimental/: mod.rs
src/heap_profiler/: mod.rs
src/heapprofiler/: mod.rs
src/indexeddb/: mod.rs
src/input/: mod.rs
src/inspector/: mod.rs
src/io/: mod.rs
src/layertree/: mod.rs
src/log/: mod.rs
src/media/: mod.rs
src/memory/: mod.rs
src/network/: mod.rs
src/overlay/: mod.rs
src/page/: mod.rs
src/performance/: mod.rs
src/performancetimeline/: mod.rs
src/preload/: mod.rs
src/pwa/: mod.rs
src/security/: mod.rs
src/serviceworker/: mod.rs
src/smartcardemulation/: mod.rs
src/storage/: mod.rs
src/systeminfo/: mod.rs
src/tethering/: mod.rs
src/tracing/: mod.rs
src/webaudio/: mod.rs
src/webauthn/: mod.rs
tests/: builder_tests.rs
