[package]
authors = ["AzzoDude"]
description = "Generated Rust types and commands for the Chrome DevTools Protocol (browser_protocol)"
license = "MIT"
repository = "https://github.com/AzzoDude/browser_protocol"
readme = "README.md"
keywords = ["cdp", "browser", "automation", "protocol"]
categories = ["development-tools", "web-programming"]
authors = ["AzzoDude"]
description = "Generated Rust types and commands for the Chrome DevTools Protocol (browser_protocol)"
license = "MIT"
repository = "https://github.com/AzzoDude/browser_protocol"
readme = "README.md"
keywords = ["cdp", "browser", "automation", "protocol"]
categories = ["development-tools", "web-programming"]
authors = ["AzzoDude"]
description = "Generated Rust types and commands for the Chrome DevTools Protocol (browser_protocol)"
license = "MIT"
repository = "https://github.com/AzzoDude/browser_protocol"
readme = "README.md"
keywords = ["cdp", "browser", "automation", "protocol"]
categories = ["development-tools", "web-programming"]
authors = ["AzzoDude"]
description = "Generated Rust types and commands for the Chrome DevTools Protocol (browser_protocol)"
license = "MIT"
repository = "https://github.com/AzzoDude/browser_protocol"
readme = "README.md"
keywords = ["cdp", "browser", "automation", "protocol"]
categories = ["development-tools", "web-programming"]
name = "browser_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
